Verification swagger
